--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react-dom": "^16.14.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "2.0.5",
-    "react-select": "^2.4.1"
+    "react-select": "^2.4.1",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
